--- a/assets/bibliography/2024-05-07-hidden-convex-relu.bib
+++ b/assets/bibliography/2024-05-07-hidden-convex-relu.bib
@@ -1,3 +1,14 @@
+@article{barbu2023training,
+  title={Training a two-layer relu network analytically},
+  author={Barbu, Adrian},
+  journal={Sensors},
+  volume={23},
+  number={8},
+  pages={4072},
+  year={2023},
+  publisher={MDPI}
+}
+
 @inproceedings{he2015delving,
   title={Delving deep into rectifiers: Surpassing human-level performance on imagenet classification},
   author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
