Updates for camera ready
Signed-off-by: Simone Rossi <simone.rossi2@stellantis.com>

--- a/assets/bibliography/2024-05-07-understanding-icl.bib
+++ b/assets/bibliography/2024-05-07-understanding-icl.bib
@@ -10,7 +10,7 @@
   title     = {Model-agnostic meta-learning for fast adaptation of deep networks},
   abstract  = {We propose an algorithm for meta-learning that is model-agnostic, in the sense that it is compatible with any model trained with gradient descent and applicable to a variety of different learning p...},
   language  = {en},
-  booktitle = {International {Conference} on {Machine} {Learning}},
+  booktitle = {International Conference on Machine Learning},
   author    = {Finn, Chelsea and Abbeel, Pieter and Levine, Sergey},
   year      = {2017}
 }
@@ -92,7 +92,7 @@
 
 
 @inproceedings{pmlr-v119-katharopoulos20a,
-  title     = {Transformers are {RNN}s: Fast Autoregressive Transformers with Linear Attention},
+  title     = {Transformers are RNNs: Fast Autoregressive Transformers with Linear Attention},
   author    = {Katharopoulos, Angelos and Vyas, Apoorv and Pappas, Nikolaos and Fleuret, Fran{\c{c}}ois},
   booktitle = {Proceedings of the 37th International Conference on Machine Learning},
   pages     = {5156--5165},
@@ -121,7 +121,7 @@
   journaltitle = {Neural Computation},
   number       = {8},
   pages        = {1735--1780},
-  title        = {{Long Short-Term Memory}},
+  title        = {Long Short-Term Memory},
   volume       = {9}
 }
 
@@ -132,7 +132,7 @@
   editor    = {Yoshua Bengio and
                Yann LeCun},
   title     = {Order Matters: Sequence to sequence for sets},
-  booktitle = {4th International Conference on Learning Representations, {ICLR} 2016,
+  booktitle = {4th International Conference on Learning Representations, ICLR 2016,
                San Juan, Puerto Rico, May 2-4, 2016, Conference Track Proceedings},
   year      = {2016},
   url       = {http://arxiv.org/abs/1511.06391},
@@ -218,4 +218,16 @@
       eprint={2301.00234},
       archivePrefix={arXiv},
       primaryClass={cs.CL}
+}
+
+@inproceedings{Sutskever2014,
+ author = {Sutskever, Ilya and Vinyals, Oriol and Le, Quoc V},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {Z. Ghahramani and M. Welling and C. Cortes and N. Lawrence and K.Q. Weinberger},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Sequence to Sequence Learning with Neural Networks},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2014/file/a14ac55a4f27472c5d894ec1c3c743d2-Paper.pdf},
+ volume = {27},
+ year = {2014}
 }
