Updated to camera ready

--- a/assets/bibliography/2024-05-07-double-descent-demystified.bib
+++ b/assets/bibliography/2024-05-07-double-descent-demystified.bib
@@ -193,6 +193,15 @@
   year={2017}
 }
 
+@article{curth2024u,
+  title={A U-turn on Double Descent: Rethinking Parameter Counting in Statistical Learning},
+  author={Curth, Alicia and Jeffares, Alan and van der Schaar, Mihaela},
+  journal={Advances in Neural Information Processing Systems},
+  volume={36},
+  year={2024}
+}
+
+
 @inproceedings{athalye2018synthesizing,
   title={Synthesizing robust adversarial examples},
   author={Athalye, Anish and Engstrom, Logan and Ilyas, Andrew and Kwok, Kevin},
